@@ -11359,6 +11359,12 @@ $x,y$ have type \typ{INT}, \typ{FRAC}, \typ{REAL} or \typ{COMPLEX}. See also
 
 \fun{GEN}{cxexpm1}{GEN x} returns $\exp(x)-1$, for a \typ{COMPLEX} $x$.
 
+\fun{int}{cx_approx_equal}{GEN a, GEN b} test whether (\typ{INT}, \typ{FRAC},
+\typ{REAL}, or \typ{COMPLEX} of those) $a$ and $b$ are approximately equal.
+This returns $1$ if and only if the division by $a-b$ would produce a
+division by $0$ (which is a less stringent test than testing wether $a-b$
+evaluates to $0$).
+
 \section{Quadratic numbers and binary quadratic forms}
 
 \fun{GEN}{quad_disc}{GEN x} returns the discriminant of the \typ{QUAD} $x$.
